# RobotArm-HCMUT-Android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/robotarm/: CameraStreamScreen.kt  ColorTrackingScreen.kt  MainActivity.kt  ObjectDetectorScreen.kt  ObjectTrackingScreen.kt
app/src/main/java/com/example/robotarm/common/: CameraColor.kt  RobotCamera.kt  USBServer.kt  VideoServer.kt
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
